feat(schedules): generate CPMP cycles automatically
